fixed issue with cramped images

--- a/src/app/components/routes/routes.component.css
+++ b/src/app/components/routes/routes.component.css
@@ -54,17 +54,7 @@ a {
         width: 100%;
     }
     .row img {
-        min-width: 100%;
-        min-height: 300px;
-    }
-}
-
-@media (max-width: 440px) {
-    .column {
         width: 100%;
-    }
-    .row img {
-        min-width: 100%;
-        min-height: 250px;
+        height: 100%;
     }
 }
